<resources>
    <string name="app_name">Census</string>
    <string name="action_add_person">Add person</string>
    <string name="action_about">About</string>
    <string name="dialog_person_title">Select an action for %1$s</string>
    <string name="dialog_delete_title">Delete person</string>
    <string name="dialog_delete_message">Are you sure you want to delete %1$s?</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit_person">Edit</string>
    <string name="empty_state">No people registered yet. Use the add button to create a new entry.</string>
    <string name="label_first_name">First name</string>
    <string name="label_last_name">Last name</string>
    <string name="label_email">Email</string>
    <string name="label_phone">Phone</string>
    <string name="action_save">Save</string>
    <string name="message_saved_success">Person saved successfully</string>
    <string name="message_deleted_success">Person deleted successfully</string>
    <string name="error_required_field">This field is required</string>
    <string name="error_invalid_email">Please enter a valid email</string>
    <string name="title_add_person">Add person</string>
    <string name="title_edit_person">Edit person</string>
    <string name="title_about">About</string>
    <string name="about_title">Census app</string>
    <string name="about_description">Sample project that demonstrates a full CRUD flow using MVVM, Room and Material Design components.</string>
</resources>
